--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="https://mensagensparatinder.github.io/og-image.png">
 	<title>Gerador de Mensagens para Tinder</title>
 	<link rel="stylesheet" href="style.css">
 </head>
