--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmensagensparatinder.github.io%2F&layout=button&size=small&mobile_iframe=true&width=97&height=20&appId" width="97" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
 	<script src="main.js"></script>
 </body>
 </html>	
