--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<h1 class="logo">Gerador de mensagens para Tinder</h1>
 		<p>Melhor do que enviar "Oi, tudo bem?"</p>
 		<div class="quote-container">
-			<p id="quote-subject"></p>
+			<p class="quote-subject"></p>
 		</div>
 
-		<p id="button">Gerar mensagem!</p>
+		<p class="button">Gerar mensagem!</p>
 
         <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmensagensparatinder.github.io%2F&layout=button&size=small&mobile_iframe=true&width=97&height=20&appId" width="97" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 	</div>
