--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<p class="quote-subject"></p>
 		</div>
 
-		<p class="button">Gerar mensagem!</p>
+		<p class="generate-message">Gerar mensagem!</p>
 
         <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmensagensparatinder.github.io%2F&layout=button&size=small&mobile_iframe=true&width=97&height=20&appId" width="97" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 	</div>
